kubernetes/deployments/nginx-ingress-example/external-dns-ingress-demo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
spec:
  rules:
  - host: omo.tools.sometools.com.br
    http:
      paths:
      - backend:
          serviceName: omo
          servicePort: 80
    # This section is only required if TLS is to be enabled for the Ingress
  tls:
      - hosts:
          - omo.tools.sometools.com.br
        secretName: omo-tools-sometools-com-br-tls
---

apiVersion: v1
kind: Service
metadata:
  name: omo
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
spec:
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
