kubernetes/deployments/nginx-ingress-example/testapi-ingress-demo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: testapi.tools.somehost.com.br
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80


apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: testapi
  namespace: default
  labels:
    application: testapi
spec:
  replicas: 3
  selector:
    matchLabels:
      application: testapi
  template:
    metadata:
      labels:
        application: testapi
    spec:
      containers:
        - name: testapi
          image: daemonza/testapi:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: testapi
  namespace: default
  labels:
    application: testapi
spec:
  type: NodePort
  selector:
    application: testapi
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: testapi
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: "api.daemonza.io"
    http:
      paths:
      - path: /testapi
        backend:
          serviceName: testapi
          servicePort: 8080
